# workmux

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: sandbox-image.yml
.omp/extensions/: workmux-status.ts
docker/: Dockerfile.omp  Dockerfile.pi
docs/guide/: agents.md  configuration.md  installation.md  skills.md  status-tracking.md
docs/guide/dashboard/: index.md
docs/guide/sandbox/: features.md  lima.md
docs/guide/sidebar/: customization.md  index.md
docs/reference/commands/: add.md  open.md  resurrect.md  sidebar.md
src/: agent_display.rs  agent_identity.rs  cli.rs  config.rs  github.rs  main.rs  skills.rs  test_support.rs  tips.rs
src/agent_setup/: claude.rs  codex.rs  copilot.rs  gemini.rs  hooks.rs  mod.rs  omp.rs  opencode.rs  pi.rs
src/command/: add.rs  close.rs  mod.rs  open.rs  remove.rs  resurrect.rs  uninstall.rs
src/command/dashboard/: mod.rs
src/command/dashboard/app/: agents.rs  worktrees.rs
src/command/dashboard/ui/: format.rs
src/command/sidebar/: app.rs  daemon.rs  mod.rs  runtime.rs  snapshot.rs  ui.rs
src/command/sidebar/template/: context.rs  layout.rs  parser.rs
src/git/: status.rs  worktree.rs
src/multiplexer/: agent.rs  kitty.rs  mod.rs  tmux.rs  wezterm.rs  zellij.rs
src/sandbox/: clipboard.rs  container.rs  host_exec_sandbox.rs
src/sandbox/lima/: config.rs  mounts.rs
src/state/: store.rs  types.rs
src/ui/: mod.rs  pr_status.rs
src/workflow/: create.rs  file_ops.rs  merge.rs  mod.rs  open.rs  remove.rs  resurrect.rs
tests/: conftest.py  test_workmux_close.py  test_workmux_open.py  test_workmux_remove.py  test_workmux_setup.py
tests/test_workmux_add/: test_agents.py  test_named_agents.py  test_naming.py  test_session.py
