[package]
name = "workmux"
version = "0.1.209"
edition = "2024"
authors = ["workmux contributors"]
description = "An opinionated workflow tool that orchestrates git worktrees and tmux"
license = "MIT"
documentation = "https://github.com/raine/workmux#readme"
homepage = "https://github.com/raine/workmux"
repository = "https://github.com/raine/workmux"
include = [
    "/src/**/*",
    "/skills/**/*",
    "/docker/**/*",
    "/.claude-plugin/**/*",
    "/.codex/hooks/**/*",
    "/.github/hooks/**/*",
    "/resources/opencode/**/*",
    "/resources/gemini/**/*",
    "/.pi/extensions/**/*",
    "/Cargo.toml",
    "/Cargo.lock",
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
glob = "0.3"
pathdiff = "0.2"
percent-encoding = "2.3"
home = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
edit = "0.1"
which = "8.0"
minijinja = "2.19"
tabled = { version = "0.20", features = ["ansi"] }
git-url-parse = "0.6.0"
shlex = "1.3"
slug = "0.1"
indicatif = "0.18"
console = "0.16"
regex = "1"
pulldown-cmark = { version = "0.13", default-features = false }
textwrap = "0.16"
ratatui = "0.30"
crossterm = "0.29"
ansi-to-tui = "8"
notify-rust = "4"
libc = "0.2"
ctrlc = "3.5"
base64 = "0.22"
nix = { version = "0.31.2", features = ["fs"] }
tempfile = "3.27"
getrandom = "0.4.2"
similar = "3"
terminal-light = "1.8"
unicode-width = "0.2"
signal-hook = "0.4"
notify = "9.0.0-rc.3"
ignore = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[dev-dependencies]
filetime = "0.2.27"

[patch.crates-io]
crossterm = { git = "https://github.com/raine/crossterm" }

[profile.release]
strip = true       # Strip debug symbols
lto = true         # Link Time Optimization for smaller binaries
codegen-units = 1  # Maximize optimization

[package.metadata.binstall]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-amd64.{ archive-format }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-amd64.{ archive-format }"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-arm64.{ archive-format }"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-arm64.{ archive-format }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-darwin-amd64.{ archive-format }"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-darwin-arm64.{ archive-format }"
